[gd_scene format=3 uid="uid://b1jos7r4f40bc"]

[ext_resource type="Script" uid="uid://jf465a7umsp8" path="res://NPCs/NPC.gd" id="1_0ikh5"]
[ext_resource type="Script" uid="uid://coai26ivs6uv4" path="res://Data/NPCData.gd" id="2_vxakg"]
[ext_resource type="Script" uid="uid://8yo1utsr8bth" path="res://Items/Interactables/interactable.gd" id="3_k7mck"]
[ext_resource type="Texture2D" uid="uid://bi1lgavhmkq5c" path="res://Interface/UI_icons.png" id="4_k5705"]
[ext_resource type="PackedScene" uid="uid://diuwtmxdc2vvg" path="res://Items/Interactables/guest_needs_billboard.tscn" id="5_xlwy1"]
[ext_resource type="PackedScene" uid="uid://b0rlw2umttyrd" path="res://NPCs/blank_npc.glb" id="6_2pim4"]

[sub_resource type="Resource" id="Resource_k7mck"]
script = ExtResource("2_vxakg")

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_h2f5l"]
radius = 0.19628906
height = 1.8987458

[sub_resource type="SphereShape3D" id="SphereShape3D_w48l3"]
radius = 2.0

[sub_resource type="AtlasTexture" id="AtlasTexture_xlwy1"]
atlas = ExtResource("4_k5705")
region = Rect2(128, 0, 64, 64)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_2pim4"]
radius = 0.23291016
height = 1.8461914

[node name="NPC" type="CharacterBody3D" unique_id=26024771]
process_mode = 3
transform = Transform3D(1.3, 0, 0, 0, 1.3, 0, 0, 0, 1.3, 0, 0, 0)
collision_layer = 139
collision_mask = 139
floor_constant_speed = true
floor_max_angle = 1.4137167
floor_snap_length = 1.0
safe_margin = 0.056
script = ExtResource("1_0ikh5")
npc_data = SubResource("Resource_k7mck")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="." unique_id=854902024]
process_mode = 1
navigation_layers = 33

[node name="CollisionShape3D" type="CollisionShape3D" parent="." unique_id=1590653774]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9853109, 0)
shape = SubResource("CapsuleShape3D_h2f5l")

[node name="ProximityDetectArea" type="Area3D" parent="." unique_id=795830790]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9287833, 0)
collision_layer = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="ProximityDetectArea" unique_id=1182679659]
shape = SubResource("SphereShape3D_w48l3")

[node name="LookAtNode" type="Node3D" parent="." unique_id=719546373]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.0010126, 0)

[node name="Head" type="Node3D" parent="." unique_id=2053793809]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8, 0)

[node name="VisionRay" type="RayCast3D" parent="Head" unique_id=2055719919]
unique_name_in_owner = true
target_position = Vector3(0, 0, -40)
collision_mask = 9

[node name="Interactable" type="Area3D" parent="." unique_id=1997282885]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.0900524, 0)
collision_layer = 4
collision_mask = 0
script = ExtResource("3_k7mck")
id = "npc"
interact_icon = SubResource("AtlasTexture_xlwy1")
interact_text = "Talk"
show_highlight = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Interactable" unique_id=459875667]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0769043, 0)
shape = SubResource("CapsuleShape3D_2pim4")

[node name="BarkAnchor" type="Node3D" parent="." unique_id=669773913]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.9952412, 0)

[node name="GuestNeedsBillboard" parent="." unique_id=1027608702 instance=ExtResource("5_xlwy1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.140292, 0)

[node name="blank_npc" parent="." unique_id=215287757 instance=ExtResource("6_2pim4")]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0, 0, 0)

[connection signal="body_entered" from="ProximityDetectArea" to="." method="_on_proximity_detect_area_body_entered"]
[connection signal="body_exited" from="ProximityDetectArea" to="." method="_on_proximity_detect_area_body_exited"]
